Fixed background stretching issue

--- a/css/mobile-stylesheet.css
+++ b/css/mobile-stylesheet.css
@@ -83,8 +83,3 @@ html {
 }
 
 
-@keyframes flip {
-    0%,40% {
-        transform: rotateY(360deg) 
-    }
-}
